# haskell-wordfrequency

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  cabal.project  stack.yaml  wordfrequency.cabal
.github/workflows/: haskell.yml
app/: Main.hs
bench/: Main.hs
src/: WordFrequency.hs
test/: Spec.hs
