name:                 wordfrequency
version:              0.2.0
synopsis:             Implementation of word frequency as described by Richard Bird.
description:          Count word frequency in given text
homepage:             https://github.com/frankhjung/wordfrequency#readme
license:              BSD3
license-file:         LICENSE
author:               Frank H Jung
maintainer:           frankhjung@linux.com
copyright:            Copyright © 2017-2018 Frank H Jung
category:             education
build-type:           Simple
cabal-version:        >=1.10
extra-source-files:   README.md

source-repository head
  type:               git
  location:           git@github.com:frankhjung/haskell-wordfrequency.git

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:    WordFrequency
  ghc-options:        -O2
                      -Wall
  build-depends:      base >= 4.11.1 && < 4.12
                    , text >= 1.2.3 && < 1.3

executable wordfrequency
  hs-source-dirs:     app
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.11.1 && < 4.12
                    , wordfrequency

test-suite test
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  ghc-options:        -O2
                      -Wall
                      -threaded
  build-depends:      base >= 4.11.1 && < 4.12
                    , hspec >= 2.5.5
                    , wordfrequency

benchmark benchmark
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     bench
  main-is:            Main.hs
  build-depends:      base >= 4.11.1 && < 4.12
                    , criterion >= 1.4.1 && < 1.6
                    , wordfrequency
