cabal-version:        2.4
name:                 wordfrequency
version:              0.5.0
synopsis:             Word frequency as described by Richard Bird.
description:          Count word frequency in given text
homepage:             https://github.com/frankhjung/haskell-wordfrequency
license:              MIT
license-file:         LICENSE
author:               Frank H Jung
maintainer:           frankhjung@linux.com
copyright:            Copyright © 2017-2026 Frank H Jung
category:             education
build-type:           Simple
tested-with:          GHC == 9.6.7
extra-source-files:   README.md

source-repository head
  type:               git
  location:           https://github.com/frankhjung/haskell-wordfrequency.git

library
  default-language:   GHC2021
  hs-source-dirs:     src
  exposed-modules:    WordFrequency
  ghc-options:        -O2 -Wall
  build-depends:      base >= 4.18

executable wordfrequency
  default-language:   GHC2021
  hs-source-dirs:     app
  main-is:            Main.hs
  ghc-options:        -O2 -Wall
  build-depends:      base >= 4.18
                    , wordfrequency

test-suite test
  default-language:   GHC2021
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base >= 4.18
                    , hspec >= 2.11
                    , wordfrequency

benchmark benchmark
  default-language:   GHC2021
  type:               exitcode-stdio-1.0
  hs-source-dirs:     bench
  main-is:            Main.hs
  ghc-options:        -O2 -Wall
  build-depends:      base >= 4.18
                    , criterion >= 1.6
                    , wordfrequency
